chore: don't compile spec.ts and dist/

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,5 +13,5 @@
     "alwaysStrict": true,
     "skipLibCheck": true
   },
-  "exclude": ["tests"]
+  "exclude": ["tests", "*.spec.ts", "dist/"]
 }
