feat: sud_observe

--- a/.github/workflows/observe_full.yml
+++ b/.github/workflows/observe_full.yml
@@ -18,9 +18,20 @@ on:
         required: false
         default: false
         type: boolean
+      skipAdv:
+        description: "Skip adv update"
+        required: false
+        default: false
+        type: boolean
+      skipSud:
+        description: "Skip sud update"
+        required: false
+        default: false
+        type: boolean
 
 jobs:
   adv_observe_full:
+    if: inputs.skipAdv != true
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
@@ -45,6 +56,34 @@ jobs:
           S3_ENDPOINT: ${{ secrets.S3_ENDPOINT }}
           S3_REGION: ${{ secrets.S3_REGION }}
           SECRET_ACCESS_KEY: ${{ secrets.SECRET_ACCESS_KEY }}
+          UPSTREAM_BASE_DOMAIN: ${{ secrets.UPSTREAM_BASE_DOMAIN }}
+          OCTO_REVISION: ${{ inputs.revision }}
+          FORCED: ${{ inputs.forced }}
+  sud_observe_full:
+    if: inputs.skipSud != true
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+        with:
+          repository: "outloudvi/idoly-assets-curator"
+          ref: "observer"
+      - uses: actions/setup-python@v4
+        with:
+          python-version: "3.11"
+          cache: "pipenv"
+      - name: Install dependencies
+        run: |
+          curl https://raw.githubusercontent.com/pypa/pipenv/master/get-pipenv.py | python
+          bash install.sh
+          pipenv install
+      - run: pipenv run python observe.py
+        env:
+          B2_KEY_ID: ${{ secrets.ACCESS_KEY_ID }}
+          B2_APP_KEY: ${{ secrets.SECRET_ACCESS_KEY }}
+          B2_BUCKET_NAME: ${{ secrets.ASSETS_BUCKET_NAME }}
+          B2_ENDPOINT_URL: ${{ secrets.S3_ENDPOINT }}
+          B2_REGION: ${{ secrets.S3_REGION }}
+          API_SECRET: ${{ secrets.BACKEND_MANAGE_READ_KEY }}
           UPSTREAM_BASE_DOMAIN: ${{ secrets.UPSTREAM_BASE_DOMAIN }}
           OCTO_REVISION: ${{ inputs.revision }}
           FORCED: ${{ inputs.forced }}
