ci: pipenv shall be installed explicitly

--- a/.github/workflows/observe_full.yml
+++ b/.github/workflows/observe_full.yml
@@ -80,6 +80,7 @@ jobs:
       - name: Install dependencies
         run: |
           bash install.sh
+          pip install pipenv --user
           pipenv install
       - run: pipenv run python observe_sud.py
         env:
@@ -107,6 +108,7 @@ jobs:
           cache: 'pipenv'
       - name: Install dependencies
         run: |
+          pip install pipenv --user
           pipenv install
       - run: pipenv run python observe_spi.py
         env:
